--- a/ios/WebyHackCamp/Scenes/MenuViewController.storyboard
+++ b/ios/WebyHackCamp/Scenes/MenuViewController.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +18,151 @@
                     <view key="view" contentMode="scaleToFill" id="PYd-iW-ila">
                         <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Ax-Nm-H5V">
+                                <rect key="frame" x="0.0" y="0.0" width="687" height="414"/>
+                                <color key="backgroundColor" red="0.1294117719" green="0.1294117719" blue="0.1294117719" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="j0N-Rw-8HP">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1hV-Mt-IvX">
+                                <rect key="frame" x="697" y="15" width="24" height="22"/>
+                                <state key="normal" image="close"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="music" translatesAutoresizingMaskIntoConstraints="NO" id="vkC-Wl-bbV">
+                                <rect key="frame" x="686" y="97" width="40" height="41"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="visual" translatesAutoresizingMaskIntoConstraints="NO" id="kY8-RZ-ue4">
+                                <rect key="frame" x="687" y="208" width="40" height="41"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SKL-55-AhC">
+                                <rect key="frame" x="702" y="138" width="10" height="10"/>
+                                <color key="backgroundColor" red="0.17254901959999999" green="1" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="SKL-55-AhC" secondAttribute="height" multiplier="8:8" id="4Jn-bd-NgP"/>
+                                    <constraint firstAttribute="width" constant="10" id="ehe-ma-xWI"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" red="1" green="0.83529412749999998" blue="0.30980393290000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oqt-a8-BgA">
+                                <rect key="frame" x="691" y="97" width="30" height="51"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="81U-5k-3TO">
+                                <rect key="frame" x="702.66666666666663" y="249" width="10" height="10"/>
+                                <color key="backgroundColor" red="0.17254901959999999" green="1" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="10" id="V8T-Jp-cq2"/>
+                                    <constraint firstAttribute="width" secondItem="81U-5k-3TO" secondAttribute="height" multiplier="8:8" id="hX6-fg-vBX"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" red="1" green="0.83529412749999998" blue="0.30980393290000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RdM-ey-mfy">
+                                <rect key="frame" x="692.66666666666663" y="208" width="30" height="51"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1294117719" green="0.1294117719" blue="0.1294117719" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ye1-lA-FAE" firstAttribute="trailing" secondItem="1hV-Mt-IvX" secondAttribute="trailing" constant="15" id="1kw-VF-uYf"/>
+                            <constraint firstItem="kY8-RZ-ue4" firstAttribute="top" secondItem="oqt-a8-BgA" secondAttribute="bottom" constant="60" id="7QJ-mK-7FC"/>
+                            <constraint firstItem="81U-5k-3TO" firstAttribute="top" secondItem="kY8-RZ-ue4" secondAttribute="bottom" id="Edp-sM-SVg"/>
+                            <constraint firstItem="oqt-a8-BgA" firstAttribute="top" secondItem="vkC-Wl-bbV" secondAttribute="top" id="Jo9-my-1Zi"/>
+                            <constraint firstItem="SKL-55-AhC" firstAttribute="top" secondItem="vkC-Wl-bbV" secondAttribute="bottom" id="MjT-54-ANE"/>
+                            <constraint firstItem="4Ax-Nm-H5V" firstAttribute="bottom" secondItem="Ye1-lA-FAE" secondAttribute="bottom" id="N5h-WV-y42"/>
+                            <constraint firstItem="SKL-55-AhC" firstAttribute="centerX" secondItem="vkC-Wl-bbV" secondAttribute="centerX" constant="1" id="THF-58-sDb"/>
+                            <constraint firstItem="kY8-RZ-ue4" firstAttribute="leading" secondItem="4Ax-Nm-H5V" secondAttribute="trailing" id="WSV-fD-7AE"/>
+                            <constraint firstItem="Ye1-lA-FAE" firstAttribute="trailing" secondItem="vkC-Wl-bbV" secondAttribute="trailing" constant="10" id="Whe-fl-sdu"/>
+                            <constraint firstItem="RdM-ey-mfy" firstAttribute="centerX" secondItem="kY8-RZ-ue4" secondAttribute="centerX" id="dD8-ng-GRb"/>
+                            <constraint firstItem="vkC-Wl-bbV" firstAttribute="top" secondItem="1hV-Mt-IvX" secondAttribute="bottom" constant="60" id="f28-L3-sdM"/>
+                            <constraint firstItem="vkC-Wl-bbV" firstAttribute="leading" secondItem="4Ax-Nm-H5V" secondAttribute="trailing" constant="-1" id="hLz-Zd-McM"/>
+                            <constraint firstItem="81U-5k-3TO" firstAttribute="centerX" secondItem="kY8-RZ-ue4" secondAttribute="centerX" id="iWr-T2-52S"/>
+                            <constraint firstItem="oqt-a8-BgA" firstAttribute="centerX" secondItem="vkC-Wl-bbV" secondAttribute="centerX" id="lNi-UA-JVt"/>
+                            <constraint firstItem="1hV-Mt-IvX" firstAttribute="top" secondItem="Ye1-lA-FAE" secondAttribute="top" constant="15" id="lsn-vo-oIj"/>
+                            <constraint firstItem="1hV-Mt-IvX" firstAttribute="leading" secondItem="4Ax-Nm-H5V" secondAttribute="trailing" constant="10" id="oDa-Zr-TYN"/>
+                            <constraint firstItem="RdM-ey-mfy" firstAttribute="top" secondItem="kY8-RZ-ue4" secondAttribute="top" id="pGL-vy-zFD"/>
+                            <constraint firstItem="oqt-a8-BgA" firstAttribute="bottom" secondItem="SKL-55-AhC" secondAttribute="bottom" id="sZN-XO-YOg"/>
+                            <constraint firstItem="RdM-ey-mfy" firstAttribute="bottom" secondItem="81U-5k-3TO" secondAttribute="bottom" id="tNA-V0-MW5"/>
+                            <constraint firstItem="4Ax-Nm-H5V" firstAttribute="leading" secondItem="Ye1-lA-FAE" secondAttribute="leading" id="x1H-Bd-kwt"/>
+                            <constraint firstAttribute="trailing" secondItem="kY8-RZ-ue4" secondAttribute="trailing" constant="9" id="z1a-vn-bAO"/>
+                            <constraint firstItem="4Ax-Nm-H5V" firstAttribute="top" secondItem="Ye1-lA-FAE" secondAttribute="top" id="zSI-yc-aqt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Ye1-lA-FAE"/>
                     </view>
+                    <connections>
+                        <outlet property="closeButton" destination="1hV-Mt-IvX" id="enQ-FV-JPU"/>
+                        <outlet property="collectionView" destination="4Ax-Nm-H5V" id="keF-u8-Rc1"/>
+                        <outlet property="musicButton" destination="oqt-a8-BgA" id="nu9-Nd-tcD"/>
+                        <outlet property="musicView" destination="SKL-55-AhC" id="bFz-2m-YdT"/>
+                        <outlet property="visualButton" destination="RdM-ey-mfy" id="cQt-of-R4m"/>
+                        <outlet property="visualView" destination="81U-5k-3TO" id="5h1-yO-mNg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ykj-Xc-eoa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98" y="211"/>
+            <point key="canvasLocation" x="97.826086956521749" y="210.1449275362319"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="close" width="19" height="21"/>
+        <image name="music" width="40" height="41"/>
+        <image name="visual" width="40" height="41"/>
+    </resources>
 </document>
