update web and sketch

--- a/ios/WebyHackCamp/Scenes/MenuCollectionViewCell.xib
+++ b/ios/WebyHackCamp/Scenes/MenuCollectionViewCell.xib
@@ -38,8 +38,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIN-nu-Az9">
-                                <rect key="frame" x="8" y="57" width="320" height="251"/>
+                                <rect key="frame" x="8" y="45.5" width="320" height="262.5"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="selected" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBf-QA-heS">
+                                <rect key="frame" x="8" y="316" width="41" height="12"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -48,8 +54,11 @@
                             <constraint firstItem="VfX-FI-aqE" firstAttribute="top" secondItem="YIN-nu-Az9" secondAttribute="bottom" constant="8" id="4bO-IX-gRW"/>
                             <constraint firstAttribute="bottom" secondItem="VfX-FI-aqE" secondAttribute="bottom" constant="8" id="7aA-oE-Ozk"/>
                             <constraint firstItem="YIN-nu-Az9" firstAttribute="leading" secondItem="TDv-sH-GGb" secondAttribute="leading" constant="8" id="Fvu-e4-79G"/>
-                            <constraint firstItem="YIN-nu-Az9" firstAttribute="top" secondItem="Hvm-68-6KB" secondAttribute="bottom" constant="8" id="NSy-ru-T2O"/>
+                            <constraint firstAttribute="bottom" secondItem="MBf-QA-heS" secondAttribute="bottom" constant="8" id="GLN-Ck-ij0"/>
+                            <constraint firstItem="YIN-nu-Az9" firstAttribute="top" secondItem="29V-Bz-sxw" secondAttribute="bottom" constant="8" id="I30-qX-WH3"/>
                             <constraint firstItem="Hvm-68-6KB" firstAttribute="top" secondItem="TDv-sH-GGb" secondAttribute="top" constant="8" id="O0k-aH-ggz"/>
+                            <constraint firstItem="MBf-QA-heS" firstAttribute="leading" secondItem="TDv-sH-GGb" secondAttribute="leading" constant="8" id="Reo-aK-wsH"/>
+                            <constraint firstItem="MBf-QA-heS" firstAttribute="top" secondItem="YIN-nu-Az9" secondAttribute="bottom" constant="8" id="Zgt-ny-aXc"/>
                             <constraint firstAttribute="trailing" secondItem="VfX-FI-aqE" secondAttribute="trailing" constant="8" id="Zhi-Oe-iab"/>
                             <constraint firstAttribute="trailing" secondItem="YIN-nu-Az9" secondAttribute="trailing" constant="8" id="Zll-kB-8h0"/>
                             <constraint firstItem="Hvm-68-6KB" firstAttribute="leading" secondItem="TDv-sH-GGb" secondAttribute="leading" constant="8" id="omA-20-bSM"/>
@@ -80,6 +89,7 @@
             <connections>
                 <outlet property="dateLabel" destination="VfX-FI-aqE" id="rVb-My-O2p"/>
                 <outlet property="nameLabel" destination="29V-Bz-sxw" id="jgq-W9-NYq"/>
+                <outlet property="selectedLabel" destination="MBf-QA-heS" id="YWX-ef-cOO"/>
                 <outlet property="typeImageView" destination="Hvm-68-6KB" id="vOM-9T-qqQ"/>
                 <outlet property="typedButton" destination="YIN-nu-Az9" id="fq8-9O-qMk"/>
             </connections>
